--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,12 @@
   </div>
   <div id="room">
     <h3></h3>
+    <h4 style="display: inline;" id="nickname"></h4>
+    <button id="change_nickname">닉네임 수정</button>
     <ul></ul>
-    <form action="" id="name">
-      <input type="text" placeholder="nickname" required>
-      <button>Send</button>
-    </form>
 
     <form action="" id="msg">
-      <input type="text" placeholder="message" required>
+      <input type="text" placeholder="message" required autofocus>
       <button>Send</button>
     </form>
   </div>
